--- a/configurations/configuration.env
+++ b/configurations/configuration.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/leadmanagementsystem
+MONGO_URI=mongodb://localhost:27017/FitnessApp
