--- a/configurations/configuration.env
+++ b/configurations/configuration.env
@@ -1,3 +1,6 @@
 NODE_ENV=development
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/FitnessApp
+JWT_SECRET=dajfasfjnasdljasnd
+JWT_EXPIRE=30d
+JWT_COOKIE_EXPIRE=30
